<resources>
    <string name="app_name">E Smart</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search eSmart</string>
    <string name="searchForMotors">Search for Motors</string>
    <string name="sellYourMotor">Sell Your Motor</string>
    <string name="parts_accessories">Parts &amp; Accessories</string>
    <string name="loading_data">Loading Data</string>
    <string name="member_center">Member Center</string>
    <string name="place_text_in_search_box">Place Text in Search box</string>
    <string name="search_image">Search Image</string>
    <string name="all_of_esmart">All of eSmart</string>
    <string name="sell_your_motor_picture">Sell your motor picture</string>
    <string name="selling">Selling</string>
    <string name="manage_listing">Manage my Listings</string>
    <string name="my_panel">My Panel</string>
    <string name="notifications">Notifications</string>
    <string name="cart">Cart</string>
    <string name="my_account">My Account</string>

    <!--TRANSLATED STRINGS STARTS-->

    <string name="no_email_alert_0">No email alerts</string>
    <string name="daily_alerts_1">Daily alerts</string>
    <string name="weekly_alerts_2">Weekly alerts</string>
    <string name="fortnightly_alerts_3">Fortnightly alerts</string>
    <string name="monthly_alert_4">Monthly alerts</string>
    <string name="more">More</string>
    <string name="recent_items">Recent Items</string>
    <string name="dont_have_items">You don\'t have any items saved yet.</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="no_recent_saved_searches">No recent or saved searches.</string>
    <string name="guest">Guest</string>
    <string name="join_us">Join Us</string>
    <string name="already_a_member">Already a member\nSign In</string>
    <string name="logout">Logout</string>
    <string name="Home">Home</string>
    <string name="Orders">Orders</string>
    <string name="Messages">Messages</string>
    <string name="Settings">Settings</string>
    <string name="all_categories">All Categories</string>
    <string name="search_text_placeholder">Search &#8230;</string>
    <string name="home">HOME</string>
    <string name="sell_an_item">Sell an item</string>
    <string name="auth_error">Authentication Error</string>
    <string name="login_incorrect">The username or password you entered is incorrect.</string>
    <string name="unexpected_error_occurred">Unexpected error occurred</string>
    <string name="unexpected_server_error">Unexpected Server Error</string>
    <string name="crash_report">Crash Report</string>
    <string name="did_send_error_report">Application had crashed last time. Would you send the error report?</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="check_network">Please check your network connection and try again.</string>
    <string name="Cancel">Cancel</string>
    <string name="Retry">Retry</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <!--TRANSLATED STRINGS ENDS-->


    <!--GCM STRINGS START-->
    <!--<string name="gcm_defaultSenderId">173870973237</string>-->
     <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_launcher">TestLauncher</string>
    <string name="title_activity_fragment_containers">FragmentContainers</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_listview">ListviewActivity</string>
    <string name="title_activity_show_products">ShowProductsActivity</string>
    <!--GCM STRING ENDS-->
</resources>

