<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/btn_cart"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/cast_ic_notification_connecting"
            android:title="@string/notifications" />

        <item
            android:id="@+id/nav_selling"
            android:title="@string/selling">
            <menu>
                <item
                    android:id="@+id/nav_sell_an_item"
                    android:title="@string/sell_an_item" />
                <item
                    android:id="@+id/nav_manage_listing"
                    android:title="@string/manage_listing" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_member_center"
            android:title="@string/member_center">
            <menu>
                <item
                    android:id="@+id/nav_messages"
                    android:title="@string/Messages" />
                <item
                    android:id="@+id/nav_orders"
                    android:title="@string/Orders" />
                <item
                    android:id="@+id/nav_my_account"
                    android:title="@string/my_account" />
            </menu>
        </item>

    </group>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings"
        android:title="@string/Settings" />

</menu>
