<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/DEFAULT_BG"
    android:gravity="bottom"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/ten_dp"
    android:paddingLeft="@dimen/seven_dp"
    android:paddingRight="@dimen/ten_dp"
    android:paddingStart="@dimen/seven_dp"
    android:paddingTop="@dimen/six_dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <!--android:layout_height="@dimen/nav_header_height"-->

    <ImageView
        android:id="@+id/iv_user_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/avatar" />

    <com.martoff.esmart.utils.RobotoTextViewLight
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/iv_user_picture"
        android:layout_toRightOf="@+id/iv_user_picture"
        android:paddingTop="@dimen/ten_dp"
        android:text="@string/guest"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="@dimen/eighteen_sp" />

    <RelativeLayout
        android:id="@+id/join_us_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user_name"
        android:layout_toEndOf="@+id/iv_user_picture"
        android:layout_toRightOf="@+id/iv_user_picture"
        android:paddingTop="25dp">

        <com.martoff.esmart.utils.RobotoTextViewLight
            android:id="@+id/tv_join_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/join_us"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black" />

        <com.martoff.esmart.utils.RobotoTextViewLight
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/tv_join_us"
            android:layout_toRightOf="@+id/tv_join_us"
            android:gravity="end"
            android:text="@string/already_a_member"
            android:textColor="@color/black" />
    </RelativeLayout>

</RelativeLayout>